--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-dynamics",
-  "version": "0.4.1",
+  "version": "0.5.0",
   "description": "User interaction building blocks for React",
   "main": "index.js",
   "scripts": {
@@ -15,8 +15,12 @@
     "react"
   ],
   "license": "ISC",
-  "dependencies": {
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+  "devDependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
+  },
+  "peerDependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   }
 }
