--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "@storybook/addon-actions": "^4.0.0-rc.1",
+    "@storybook/addons": "^4.0.0-rc.1",
     "@storybook/react": "^4.0.0-rc.1",
     "babel-loader": "^8.0.4",
     "react": "^16.2.0",
