--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@storybook/react": "^4.0.0-rc.1",
     "babel-loader": "^8.0.4",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-router": "^4.3.1"
   },
   "peerDependencies": {
     "react": "^16.2.0",
